# outbe-contracts

./: .gitignore  Cargo.toml  Makefile  README.md  package-lock.json
.github/workflows/: ci-build.yml  ci-wasm.yml  code-coverage.yml  deploy-registry-sei.yml  deploy-registry.yml  deploy-sei.yml  deploy.yml  llvm.yml  migrate.yml  pr-codex.yml  pr-review.yml
adrs/: ADR-0300-Consumption-Unit.md  ADR-0300-Tribute.md  ADR-0301-Commitment-Tier.md  ADR-0301-Vector.md  ADR-0302-Tribute-L1.md
contracts/agent/: Cargo.toml
contracts/agent-cra/: Cargo.toml
contracts/agent-iba/: Cargo.toml
contracts/agent-iba/examples/: schema.rs
contracts/agent-iba/schema/: agent-iba.json
contracts/agent-iba/src/: agent_common.rs  contract.rs  lib.rs  msg.rs  tests.rs
contracts/agent-nra/: Cargo.toml
contracts/agent-registry/: Cargo.toml  README.md
contracts/agent-registry/examples/: schema.rs
contracts/agent-registry/fixtures/: init.json
contracts/agent-registry/schema/: agent-registry.json  agent.json
contracts/agent-registry/src/: contract.rs  error.rs  msg.rs  query.rs  state.rs  tests.rs  types.rs
contracts/agent-rfa/: Cargo.toml
contracts/commitment-tier/: Cargo.toml  README.md
contracts/consumption-unit/: Cargo.toml  README.md
contracts/contract-registry/: Cargo.toml  README.md
contracts/contract-registry/examples/: schema.rs
contracts/contract-registry/fixtures/: publish.json
contracts/contract-registry/schema/: contract-registry.json
contracts/contract-registry/src/: contract.rs  error.rs  msg.rs  query.rs  state.rs  types.rs
contracts/gratis/: Cargo.toml  README.md
contracts/gratis/examples/: schema.rs
contracts/gratis/fixtures/: init.json
contracts/gratis/schema/: execute_msg.json  gratis.json  instantiate_msg.json  query_msg.json
contracts/gratis/src/: contract.rs  error.rs  lib.rs  msg.rs  native_mint.rs  state.rs  tests.rs
contracts/lysis/: Cargo.toml
contracts/metadosis/: Cargo.toml  README.md
contracts/metadosis/examples/: schema.rs
contracts/metadosis/fixtures/: cron-execute.json  cron-prepare.json  init.json
contracts/metadosis/schema/: metadosis.json
contracts/metadosis/src/: contract.rs  deficit.rs  error.rs  lib.rs  msg.rs  prepare.rs  query.rs  state.rs
contracts/nod/: Cargo.toml  README.md
contracts/outbe-tokenminer/: Cargo.toml
contracts/outbe-tokenminer/src/: contract.rs  lib.rs  msg.rs  query.rs
contracts/price-oracle/: Cargo.toml  README.md
contracts/price-oracle/examples/: schema.rs
contracts/price-oracle/fixtures/: add_token_pair.json  add_xau_usd_pair.json  init.json  set_day_type.json  set_xau_usd_day_type.json  update-nod-address.json  update_price.json  update_price_xau_usd.json
contracts/price-oracle/schema/: price-oracle.json
contracts/price-oracle/src/: contract.rs  error.rs  helpers.rs  lib.rs  msg.rs  query.rs  state.rs  tests.rs  types.rs
contracts/promis/: Cargo.toml  README.md
contracts/promis/examples/: schema.rs
contracts/promis/fixtures/: update-minter.json
contracts/promis/schema/: check_ticket_response.json  execute_msg.json  instantiate_msg.json  promis.json  query_msg.json
contracts/promis/src/: contract.rs  error.rs  lib.rs  msg.rs  query.rs  state.rs  tests.rs
contracts/raffle/: Cargo.toml
contracts/randao/: Cargo.toml
contracts/random-oracle/: Cargo.toml  README.md
contracts/random-oracle/examples/: schema.rs
contracts/random-oracle/fixtures/: init.json
contracts/random-oracle/schema/: random-oracle.json
contracts/random-oracle/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/token-allocator/: Cargo.toml  README.md
contracts/token-allocator/examples/: schema.rs
contracts/token-allocator/schema/: token-allocator.json
contracts/token-allocator/src/: contract.rs  lib.rs  msg.rs  query.rs  state.rs  types.rs
contracts/token-miner/: Cargo.toml  README.md
contracts/token-miner/examples/: schema.rs
contracts/token-miner/fixtures/: add_to_access_list.json  init.json
contracts/token-miner/schema/: access_permissions.json  config.json  execute_msg.json  instantiate_msg.json  query_msg.json  token-miner.json  token_type.json
contracts/token-miner/src/: contract.rs  error.rs  lib.rs  msg.rs  pow.rs  query.rs  state.rs  tests.rs
contracts/token-minter/: Cargo.toml
contracts/token-minter/examples/: schema.rs
contracts/token-minter/schema/: access_permissions.json  config.json
contracts/token-minter/src/: contract.rs  error.rs  lib.rs  msg.rs  query.rs  state.rs  tests.rs
contracts/tribute/: Cargo.toml  README.md
contracts/tribute-factory/: Cargo.toml  README.md
contracts/tribute-factory/examples/: schema.rs
contracts/tribute-factory/fixtures/: init.json  update-tribute-address.json
contracts/tribute-factory/schema/: tribute-factory.json
contracts/tribute-factory/src/: contract.rs  error.rs  lib.rs  msg.rs  query.rs  state.rs  test_ecdhe.rs  types.rs
contracts/tribute/examples/: schema.rs
contracts/tribute/fixtures/: init.json  update-burner.json
contracts/tribute/schema/: tribute.json
contracts/tribute/sign-cu-ts-demo/: README.md  clean-all.ts  consts.ts  index.ts  metadosis-info.ts  metadosis-run.ts  package-lock.json  package.json  publish-tributes.ts  send-native-coins.ts  tributes-info.ts  tributes-publish.ts
contracts/tribute/src/: contract.rs  error.rs  msg.rs  query.rs  state.rs  types.rs
contracts/tribute/tribute-ts-scripts/: README.md  consts.ts  generate-wallets.ts  index.ts  metadosis-info.ts  package-lock.json  package.json  send-native-coins.ts  tributes-info.ts  tributes-publish.ts  wallets.json
contracts/vector/: Cargo.toml  README.md
hooks/: pre-commit
integration-tests/: Cargo.toml
integration-tests/tests/: multitest.rs
integration-tests/tests/setup/: mod.rs
scripts/: create_nod.ts  cron_create_job.sh  execute_tx.sh  init_contract.sh  install-hooks.sh  migrate_contract.sh  parse_contracts.sh  store_code.sh
ts-examples/: README.md  codegen.ts  config.ts  jest.config.js  package-lock.json  package.json  tsconfig.json  wallets.json
ts-examples/lib/: clientService.ts  encryption.ts  (+1 more)
(+155 files in other folders)
