[workspace]
members = ["contracts/*", "packages/*", "integration-tests"]

# Resolver has to be set explicitely in workspaces, see https://github.com/rust-lang/cargo/issues/9956
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "TODO"
repository = "https://github.com/outbe/outbe-contracts"
homepage = "TODO"
documentation = "TODO"

[workspace.dependencies]
cosmwasm-schema = { version = "2.0.0" }
cosmwasm-std = { version = "2.0.0" }

sha2 = { version = "0.10.8" }
blake3 = { version = "1.5" }
hex = { version = "0.4.3" }

cw-multi-test = { version = "2.0.0" }
cw-storage-plus = { version = "2.0.0" }
cw-utils = { version = "2.0.0" }
cw-ownable = "2.1.0"


serde = { version = "1.0.204" }
schemars = { version = "0.8.15" }
semver = "1"
thiserror = { version = "1.0.4" }

cw2 = { version = "2.0.0" }
cw20 = { version = "2.0.0" }
cw20-base = { version = "2.0.0" }


# Self dependencies
outbe-nft = { version = "*", path = "packages/outbe-nft" }
outbe-utils = { version = "*", path = "packages/outbe-utils" }
tribute = { version = "*", path = "contracts/tribute", features = ["library"] }
price-oracle = { version = "*", path = "contracts/price-oracle", features = [
    "library",
] }
nod = { version = "*", path = "contracts/nod", features = ["library"] }
vector = { version = "*", path = "contracts/vector", features = ["library"] }
metadosis = { version = "*", path = "contracts/metadosis", features = [
    "library",
] }
token-allocator = { version = "*", path = "contracts/token-allocator", features = [
    "library",
] }
randao = { version = "*", path = "contracts/randao", features = [
    "library",
] }
