[package]
name = "integration-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dev-dependencies]
cosmwasm-std = { workspace = true }
cw-multi-test = { workspace = true }

cw20 = { workspace = true }

outbe-nft = { workspace = true }
tribute = { workspace = true }
nod = { workspace = true }
lysis = { workspace = true }
price-oracle = { workspace = true }
token-allocator = { workspace = true}
vector = { workspace = true}
