[package]
name = "integration-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dev-dependencies]
cosmwasm-std = { workspace = true }
cw-multi-test = { workspace = true }
outbe-nft = { workspace = true }
outbe-utils = { workspace = true }
tribute = { workspace = true }
nod = { workspace = true }
metadosis = { workspace = true }
price-oracle = { workspace = true }
token-allocator = { workspace = true}
vector = { workspace = true}
random-oracle = { workspace = true}
[dependencies]
cw-ownable = "2.1.0"
