[package]
name = "agent-iba"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["demo"]
demo = []
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
serde = { workspace = true }
cw2 = { workspace = true }
thiserror = { workspace = true }
agent-nra = { workspace = true }
agent-common = { workspace = true }



[dev-dependencies]
cw-multi-test = { workspace = true }