[package]
name = "gratis"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["demo"]
demo = []
library = []

[dependencies]
cosmwasm-std = { workspace = true, features = ["stargate"] }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw20-base = { workspace = true }
cw20 = { workspace = true }
thiserror = { workspace = true }

outbe-utils = { workspace = true }
serde-json-wasm = "1.0.1"
