[package]
name = "metadosis"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
serde = { workspace = true }
cw2 = { workspace = true }
thiserror = { workspace = true }
cw-ownable = { workspace = true }
outbe-utils = { workspace = true }
cw-utils = { workspace = true }

tribute = { workspace = true}
nod = { workspace = true}
vector = { workspace = true}
token-allocator = { workspace = true}
price-oracle = { workspace = true}
random-oracle = { workspace = true}
rand = { version = "0.8.5", default-features = false }
rand_chacha = "0.3.1"


[dev-dependencies]
cw-multi-test = { workspace = true }
