[package]
name = "outbe-tokenminer"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = { version = "1.5.4", features = ["stargate"] }
cosmwasm-schema = { version = "1.5.4" }
prost = "0.14.1"

[dependencies.serde]
version = "1.0.103"
features = [
    "derive",
    "alloc",
]
default-features = false

[dependencies.thiserror]
version = "1.0.26"
