[package]
name = "promis"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
serde = { workspace = true }
cw2 = { workspace = true }
cw20-base = { workspace = true }
cw20 = { workspace = true }
thiserror = { workspace = true }
cw-ownable = { workspace = true }

schemars = { workspace = true }
blake3 = { workspace = true }
outbe-utils = { workspace = true }

[dev-dependencies]
cosmwasm-schema = { workspace = true }
