[package]
name = "random-oracle"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
serde = { workspace = true }
cw2 = { workspace = true }
thiserror = { workspace = true }
cw-ownable = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
