[package]
name = "token-miner"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw20-base = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
outbe-nft = { workspace = true }
outbe-utils = { workspace = true }
nod = { workspace = true }
price-oracle = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
