[package]
name = "tribute-factory"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["demo"]
demo = []
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
serde = { workspace = true }
cw2 = { workspace = true }
thiserror = { workspace = true }
cw-ownable = { workspace = true }
outbe-utils = { workspace = true }
tribute = { version = "*", path = "../tribute", features = ["library"] }
# ECDHE encryption dependencies
curve25519-dalek = "4.1.1"
chacha20poly1305 = "0.10.1"
getrandom = { version = "0.2.16", features = ["js"] }

[dev-dependencies]
cw-multi-test = { workspace = true }
rand = "0.8.5"
