[package]
name = "tribute-factory"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["demo"]
demo = []
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
serde = { workspace = true }
cw2 = { workspace = true }
thiserror = { workspace = true }
cw-ownable = { workspace = true }
outbe-utils = { workspace = true }
tribute = { version = "*", path = "../tribute", features = ["library"] }

halo2-base = { git = "https://github.com/bullet-tooth/halo2-lib.git", rev = "aded5e59e005bcbac0862fcfc77ab3f5c2513a4b", features = ["halo2-axiom"], default-features = false}

[dev-dependencies]
cw-multi-test = { workspace = true }
